# random-users

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2025_05_21_2329-0f951d2d4295_init_revision.py  2025_05_21_2345-cb97e2f0aa0c_add_user_model.py
backend/app/: .env.example  create_fastapi_app.py  main.py
backend/app/api/: __init__.py  error_handlers.py
backend/app/api/users/: router.py  service.py
backend/app/core/: config.py  dependencies.py  exceptions.py
backend/app/core/db/: __init__.py  helper.py
backend/app/core/models/: __init__.py  base.py  user.py
backend/app/core/schemas/: pagination.py  user.py
backend/app/crud/: users.py
backend/app/services/random_user/: __init__.py  exceptions.py  random_api.py  schemas.py
backend/app/utils/: db_start.py
backend/tests/: conftest.py  test_crud_users.py  test_routes_users.py  test_service_users.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/Features/: Pagination.jsx
frontend/src/components/Features/AddPerson/: AddPerson.jsx
frontend/src/components/Features/Table/: PeopleTable.jsx  UserTr.jsx
frontend/src/components/Pages/: Home.jsx  User.jsx
frontend/src/components/UI/: Header.jsx
frontend/src/service/: userService.js
frontend/src/store/: userStore.js
