[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
alembic = "^1.15.2"
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
